--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^0.7.4"
+  },
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "chokidar": "^2.1.0",
+    "express": "^4.16.4",
+    "find": "^0.2.9",
+    "handlebars": "^4.0.12"
   }
 }
